--- a/app/views/admin/tasks/send_school_email.html.erb
+++ b/app/views/admin/tasks/send_school_email.html.erb
@@ -10,27 +10,12 @@
     <h2 class="govuk-heading-l"><%= @current_task_name.humanize %></h2>
   </div>
 
-    <div class="govuk-grid-column-two-thirds">
-      <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            UAS Home Office
-          </dt>
-
-          <dd class="govuk-summary-list__value">
-            <%= link_to "Download", irp.report_path(@claim), class: "govuk-button" %>
-          </dd>
-        </div>
-      </dl>
-
-    </div>
-
   <div class="govuk-grid-column-two-thirds">
     <% if !@task.passed.nil? %>
       <%= render "task_outcome", task: @task do %>
       <% end %>
     <% else %>
-      <%= render "form", task_name: "home_office", claim: @claim %>
+      <%= render "form", task_name: "send_school_email", claim: @claim %>
     <% end %>
 
     <%= render partial: "admin/task_pagination" %>
